Updated href phone number index.html

--- a/03follow-along/index.html
+++ b/03follow-along/index.html
@@ -39,7 +39,7 @@
             National Archives Foundation<br>
             700 Pennsylvania Avenue, NW<br>
             Washington, DC 20408-0001<br>
-                Toll-free: <a href="tel;8662726272">1-866-272-6272</a>
+                Toll-free: <a href="tel:8662726272">1-866-272-6272</a>
             </address>
         
         
