--- a/03hand-coding/index.html
+++ b/03hand-coding/index.html
@@ -28,7 +28,8 @@
 Established 2005 in southern California on the streets of LA's Florence District Menace Loko's unique sound blends dirty south trap beats with old skool west coast, east coast and down south influences for the flavor that is
 Gee Related Entertainment
 G.R.E</p>    
-            <p>Its More Than A Lifestyle Its A Movement with more <em>work</em> Then your neighborhood pusher Menaceloko and Gee Related Entertainment are proud to present you with the soundtrack to the streets!</p>
+            <p>Its More Than A Lifestyle Its A Movement!With more <em>work</em> Then your neighborhood pusher Menaceloko and Gee Related Entertainment are proud to present you with the soundtrack to the streets!With over 30 tracks on 2 albums
+            Dont sleep on the beats for the streets!</p>
         
             <p><a href=https://geerelatedboy.wixsite.com/geerelatedentertainm target="_blank" rel="noopener">SOURCE</a></p>
         
