--- a/03hand-coding/index.html
+++ b/03hand-coding/index.html
@@ -17,7 +17,7 @@
         <!-- Start of the Page navigation -->
         <nav>
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="INDEX.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
             </ul>
         </nav>
