--- a/03hand-coding/index.html
+++ b/03hand-coding/index.html
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="INDEX.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
-            <p><a href=https://geerelatedboy.wixsite.com/geerelatedentertainm target="_blank" rel="noopener">VIDEOS</a></p>
+            <p><a href=https://geerelatedboy.wixsite.com/geerelatedentertainm/about-5?wix-vod-video-id=df42c3ac3bad40aea3a76594d173f3a1&wix-vod-comp-id=comp-kyrydxop target="_blank" rel="noopener">VIDEOS</a></p>
         </ul>
         </nav>
         <!-- Start of the Page content -->
