--- a/03hand-coding/events.html
+++ b/03hand-coding/events.html
@@ -23,7 +23,8 @@
         </nav>
         <!-- Start of the Page content -->
         <main>
- <p><a href=https://www.youtube.com/watch?v=NSGU6ZUgfOk target="_blank" rel="noopener">NewMusic</a></p>        </ul></h1>
+ <p><a href=https://www.youtube.com/watch?v=NSGU6ZUgfOk target="_blank" rel="noopener">NewMusic</a></p>        
+        </ul></h1>
         <ol>
             <li>Ghetto Gospel 1 Out Now!</li>
             <li>Ghetto Gospel 2 Out Now!</li>
