--- a/03hand-coding/index.html
+++ b/03hand-coding/index.html
@@ -30,11 +30,11 @@ Established 2005 in southern California on the streets of LA's Florence District
 Gee Related Entertainment
 G.R.E</p>    
             <p>Its More Than A Lifestyle Its A Movement!With more <em>WORK</em> Then your neighborhood pusher Menaceloko and Gee Related Entertainment are proud to present you with the soundtrack to the streets!With over 30 tracks on 2 albums
-            Dont sleep on the beats for the streets!</p>
+            Dont sleep on the beats for the streets!Follow us on all Major Music Streaming Platforms and join the mailing list to be up to date on all future performances!</p>
         
             <p><a href=https://geerelatedboy.wixsite.com/geerelatedentertainm target="_blank" rel="noopener">SHOP</a></p>
         
-  
+   <p>INew Merchandise Coming Soon!</p>
         <!-- Start of the Page footer -->
         <footer>
         <p>&copy; 2023&bull; Michael Goldsberry 323-861-6057 &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
