--- a/03hand-coding/index.html
+++ b/03hand-coding/index.html
@@ -34,7 +34,7 @@ G.R.E</p>
         
             <p><a href=https://geerelatedboy.wixsite.com/geerelatedentertainm target="_blank" rel="noopener">SHOP</a></p>
         
-   <p>INew Merchandise Coming Soon!</p>
+   <p>New Merchandise Coming Soon!</p>
         <!-- Start of the Page footer -->
         <footer>
         <p>&copy; 2023&bull; Michael Goldsberry 323-861-6057 &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
