--- a/03hand-coding/index.html
+++ b/03hand-coding/index.html
@@ -37,7 +37,7 @@ G.R.E</p>
    <p>New Merchandise Coming Soon!</p>
         <!-- Start of the Page footer -->
         <footer>
-        <p>&copy; 2023&bull; Michael Goldsberry <a href="tel:323-861-6057">323-861-6057</a> &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
+        <p>&copy; 2023&bull; Michael Goldsberry <a href="tel:323-861-6057"></a> &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
         </footer>
     
     </body>
