--- a/03hand-coding/events.html
+++ b/03hand-coding/events.html
@@ -47,7 +47,7 @@
         </main>
         <!-- Start of the Page footer -->
         <footer>
-        <p>&copy; 2023&bull; Michael Goldsberry &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
+        <p>&copy; 2023&bull; Michael Goldsberry &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a><a href="tel:3238616057">1-323-861-6057</a></p>
         </footer>
     
     </body>
