--- a/03hand-coding/index.html
+++ b/03hand-coding/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
-    <head>
+     <head>
         <title>Gee Related Entertainment</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
-        <meta name="description" content="Its More Than A Lifestyle Its A Movement!">
+        <meta name="description" content="Hear The Newest Hip Hop And R&B">
         <meta name="author" content="Michael Goldsberry">
     
     </head>
