--- a/03hand-coding/index.html
+++ b/03hand-coding/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
      <head>
-        <title>Gee Related Entertainment</title>
+        <title><strong>Gee Related Entertainment</strong></title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <meta name="description" content="Hear The Newest Hip Hop And R&B">
