--- a/03hand-coding/index.html
+++ b/03hand-coding/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
      <head>
         <title><strong>Gee Related Entertainment</strong></title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+           <!-- Start of the Page header -->
+          <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <meta name="description" content="Hear The Newest Hip Hop And R&B">
         <meta name="author" content="Michael Goldsberry">
     
     </head>
     <body>
-        <!-- Start of the Page header -->
+        <!-- end of the Page header -->
         <header>
         <h1>Newest HipHop & R&B</h1>
         <p>Its more than a lifestyle its a movement"
