--- a/03hand-coding/index.html
+++ b/03hand-coding/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
      <head>
-        <title><strong>Gee Related Entertainment</strong></title>
+        <title>Gee Related Entertainment</title>
            <!-- Start of the Page header -->
           <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
