--- a/03hand-coding/index.html
+++ b/03hand-coding/index.html
@@ -5,7 +5,7 @@
      
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
-        <meta name="description" content="Hear The Newest Hip Hop And R&B">
+        <meta name="description" content="Gee Related Entertainment">
         <meta name="author" content="Michael Goldsberry">
     
     </head>
