--- a/03hand-coding/events.html
+++ b/03hand-coding/events.html
@@ -46,8 +46,8 @@
         
         </main>
         <!-- Start of the Page footer -->
-        <footer>
-        <p>&copy; 2023&bull; Michael Goldsberry &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a><a href="tel:3238616057">1-323-861-6057</a></p>
+       <footer>
+        <p>&copy; 2023&bull; Michael Goldsberry <a href="tel:1-323-861-6057"></a> &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
         </footer>
     
     </body>
