--- a/03hand-coding/events.html
+++ b/03hand-coding/events.html
@@ -47,7 +47,7 @@
         </main>
         <!-- Start of the Page footer -->
        <footer>
-        <p>&copy; 2023&bull; Michael Goldsberry <a href="tel:1-323-861-6057"></a> &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
+        <p>&copy; 2023&bull; Michael Goldsberry <a href="Call Us tel:1-323-861-6057"></a> &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
         </footer>
     
     </body>
