--- a/03hand-coding/events.html
+++ b/03hand-coding/events.html
@@ -47,8 +47,9 @@
         </main>
         <!-- Start of the Page footer -->
        <footer>
-        <p>&copy; 2023&bull; Michael Goldsberry <a href="tel:1-323-861-6057"></a>Call Us &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
-        </footer>
+        <p>&copy; 2023&bull; Michael Goldsberry  &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
+       <a href="tel:1-323-861-6057"></a>Call Us
+       </footer>
     
     </body>
 </html>
