--- a/03hand-coding/events.html
+++ b/03hand-coding/events.html
@@ -48,7 +48,7 @@
         <!-- Start of the Page footer -->
        <footer>
         <p>&copy; 2023&bull; Michael Goldsberry  &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
-       <a href="tel:1-323-861-6057"></a>Call Us
+       <p><a href="tel:1-323-861-6057"></a>Call Us</p>
        </footer>
     
     </body>
