--- a/03hand-coding/index.html
+++ b/03hand-coding/index.html
@@ -41,6 +41,9 @@ G.R.E</p>
         <footer>
         <p>&copy; 2023&bull; Michael Goldsberry <a href="tel:1-323-861-6057"></a> &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
         </footer>
-    
+      <address>
+          <a href="tel:3238616057">1-323-861-6057</a>
+      </address>
+        
     </body>
 </html>
