--- a/03hand-coding/index.html
+++ b/03hand-coding/index.html
@@ -16,10 +16,10 @@
         <h1>Gee Related Entertainment</h1>
         
              <body>Its More Then A Lifestyle Its A Movement!<body/>
-<p>Established 2005 in southern California on the streets of LA's Florence District Menace Loko's unique sound blends dirty south trap beats with old skool west coast, east coast and down south influences for the flavor that is
-Gee Related Entertainment
-G.R.E</p>    
+   
         </header>
+       <p>Established 2005 in southern California on the streets of LA's Florence District Menace Loko's unique sound blends dirty south trap beats with old skool west coast, east coast 
+            and down south influences for the flavor that is Gee Related Entertainment G.R.E</p>    
         <!-- Start of the Page navigation -->
         <nav>
         <ul>
