--- a/04intro-css/events.html
+++ b/04intro-css/events.html
@@ -25,7 +25,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="events.html">Events</a></li>
+            <li class="active"><a href="index.html">Events</a></li>
         </ul>
     </nav>
 
