--- a/04intro-css/index.html
+++ b/04intro-css/index.html
@@ -23,7 +23,7 @@
     <!-- Start of the Page navigation -->
     <nav>
         <ul>
-            <li class="active"><a href="index.html">Home</a></li>
+            <li class="active"><a href="events.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
         </ul>
     </nav>
