--- a/04intro-css/events.html
+++ b/04intro-css/events.html
@@ -24,8 +24,8 @@
     <!-- Start of the Page navigation -->
     <nav>
         <ul>
-            <li class="active"><a href="index.html">Home</a></li>
-            <li ><a href="events.html">Events</a></li>
+            <li ><a href="index.html">Home</a></li>
+            <li class="active"><a href="events.html">Events</a></li>
         </ul>
     </nav>
 
