--- a/05images/videos.html
+++ b/05images/videos.html
@@ -32,7 +32,7 @@
 
     <!-- Start of the Page content -->
 
-
+<p><a href="https://geerelatedboy.wixsite.com/geerelatedentertainm/about-5" target="_blank" rel="noopener">Videos</a></p>
     <!-- Start of the Page footer -->
     <footer>
         <p>&copy; 2023 &bull; Michael Goldsberry 323-861-6057 &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
