--- a/05images/index.html
+++ b/05images/index.html
@@ -35,7 +35,10 @@
         <h1>Gee Related Entertainment</h1>
         <p>It's more than a lifestyle, it's a movement. Established in 2005 in southern California on the streets of LA's Florence District, Menace Loko's unique sound blends dirty south trap beats with old-school west coast, east coast, and down-south influences for the flavor that is Gee Related Entertainment (G.R.E).</p>
         <p>It's More Than A Lifestyle, It's A Movement with more <em>work</em> than your neighborhood pusher. Menaceloko and Gee Related Entertainment are proud to present you with the soundtrack to the streets!</p>
-    
+      <figure>
+            <img src="images/black_white.jpg" width="300" height="225" loading="lazy" alt="Gee Related Entertainment">
+            <figcaption>Gee Related Entertainment</figcaption>
+        </figure>
     </main>
 
     <!-- Start of the Page footer -->
