--- a/06form/contact.html
+++ b/06form/contact.html
@@ -98,13 +98,13 @@
                 <label><input type="checkbox" name="Event Apperance" value="choosen">Event Apperance</label>
             </fieldset>
             
-            <label>Preferred Apperance Time 
+            <label>Preferred consultation Time 
                 <select name="time">
-                    <option value="none">Please Select</option>
-                    <option value="morning">Between 8:00am and 12:00am</option>
-                    <option value="noon">Between 12:00am and 4:00pm</option>
-                    <option value="afternoon">Between 4:00pm and 8:00pm</option>
-                    <option value="evening">Between 8:00pm and 12:00pm</option>
+                    <option value="none">Please select</option>
+                    <option value="morning">Between 7:00am and 11:00am</option>
+                    <option value="noon">Between 11:00am and 2:00pm</option>
+                    <option value="afternoon">Between 2:00pm and 5:00pm</option>
+                    <option value="evening">Between 5:00pm and 8:00pm</option>
                 </select>
             </label>
             
