--- a/06form/contact.html
+++ b/06form/contact.html
@@ -79,7 +79,7 @@
                 <legend>Customer Information</legend>
                 <label>First Name*<input type="text" name="fname" required></label>
                 <label>Last Name*<input type="text" name="lname" required></label>
-                <label>Cell Number*<input type="tel" name="phone" required></label>
+                <label>Phone Number*<input type="tel" name="phone" required></label>
                 <label>Email*<input type="email" name="email" required></label>
             </fieldset>
             
