--- a/06follow-along/delivery.html
+++ b/06follow-along/delivery.html
@@ -34,7 +34,9 @@
                 <label>Last Name*<input type="text" name="lname" required></label>
                 <label>Cell Number*<input type="tel" name="phone" required></label>
              </fieldset>
-            
+            input[type="radio"],
+select {
+    text-align: left;
             <fieldset>
                 <legend>Delivery Method</legend>
                 <label><input type="radio" name="method" value="drone">Drone Delivery(2 hrs)</label>
