--- a/05images/index.html
+++ b/05images/index.html
@@ -27,6 +27,8 @@
             <li><a href="events.html">Events</a></li>
             <li><a href="videos.html">Videos</a></li>
             <li><a href="gallery.html">Photo Gallery</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            
         </ul>
     </nav>
 
@@ -34,11 +36,13 @@
     <main>
         <h1>Gee Related Entertainment</h1>
         <p>It's more than a lifestyle, it's a movement. Established in 2005 in southern California on the streets of LA's Florence District, Menace Loko's unique sound blends dirty south trap beats with old-school west coast, east coast, and down-south influences for the flavor that is Gee Related Entertainment (G.R.E).</p>
-        <p>It's More Than A Lifestyle, It's A Movement with more <em>work</em> than your neighborhood pusher. Menaceloko and Gee Related Entertainment are proud to present you with the soundtrack to the streets!</p>
-      <figure>
-            <img src="images/black_white.jpg" width="300" height="auto" float="right"loading="lazy" alt="Gee Related Entertainment">
+        <figure class = "wrapped">
+        <img src="images/black_white.jpg"alt="Gee Related Entertainment"   
+        width="100" height="auto"float="right">
             <figcaption>Gee Related Entertainment</figcaption>
-        </figure>
+         </figure>
+        <p>It's More Than A Lifestyle, It's A Movement with more <em>work</em> than your neighborhood pusher. Menaceloko and Gee Related Entertainment are proud to present you with the soundtrack to the streets!</p>
+    
     </main>
 
     <!-- Start of the Page footer -->
