--- a/05images/events.html
+++ b/05images/events.html
@@ -28,6 +28,7 @@
             <li class="active"><a href="events.html">Events</a></li>
             <li><a href="videos.html">Videos</a></li>
             <li><a href="gallery.html">Photo Gallery</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
 
