--- a/05images/videos.html
+++ b/05images/videos.html
@@ -27,6 +27,7 @@
             <li><a href="events.html">Events</a></li>
             <li class="active"><a href="videos.html">Videos</a></li>
             <li><a href="gallery.html">Photo Gallery</a></li>
+            <li><a href="contact.html">Contact US</a></li>
         </ul>
     </nav>
 
