--- a/05images/gallery.html
+++ b/05images/gallery.html
@@ -27,6 +27,7 @@
             <li><a href="events.html">Events</a></li>
             <li><a href="videos.html">Videos</a></li>
             <li class="active"><a href="gallery.html">Photo Gallery</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
 
@@ -47,7 +48,7 @@
         </figure>
         <figure>
             <img src="images/onstage.JPG" width="300" height="225" loading="lazy" alt="On Stage">
-            <figcaption>On Stage Caption</figcaption>
+            <figcaption>On Stage </figcaption>
         </figure>
         <figure>
             <img src="images/djquik.JPG" width="300" height="225" loading="lazy" alt="Flyer for event">
