--- a/05images/index.html
+++ b/05images/index.html
@@ -35,7 +35,7 @@
     <!-- Start of the Page content -->
     
         <h1>Gee Related Entertainment</h1>
-    <figure>    
+    <figure class="wrapped">    
     <img src="images/black_white.jpg"alt="Gee Related Entertainment"   
         width="100" height="auto"float="right">
             <figcaption>Gee Related Entertainment</figcaption>
