--- a/06form/thankyou.html
+++ b/06form/thankyou.html
@@ -14,7 +14,7 @@
     <meta http-equiv="refresh" content="5; URL=index.html">
 </head>
 
-<body>
+<main>
     <!-- Start of the Page header -->
     <header>
         <h1>Gee Related Entertainment</h1>
