--- a/06form/thankyou.html
+++ b/06form/thankyou.html
@@ -32,7 +32,7 @@
             <li><a href="thankyou.html"></a></li>
         </ul>
     </nav>
-
+    </main>
     <!-- Start of the Page content -->
     <title>Thank You</title>
     Thank You For Contacting Us We Will Be Responding Shortly
@@ -41,6 +41,4 @@
     <footer>
         <p>&copy; 2023 &bull; Michael Goldsberry &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
     </footer>
-</body>
 
-</html>
