--- a/06form/contact.html
+++ b/06form/contact.html
@@ -97,7 +97,7 @@
                 <label><input type="checkbox" name="Event Apperance" value="choosen">Event Apperance</label>
             </fieldset>
             
-            <label>Preferred consultation Time 
+            <label>Preferred Performance Time 
                 <select name="time">
                     <option value="none">Please select</option>
                     <option value="morning">Between 7:00am and 11:00am</option>
