--- a/06form/events.html
+++ b/06form/events.html
@@ -12,14 +12,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon"type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
     <!-- Start of the Page header -->
     <header>
+        <img src="images/greblack.jpg" alt="site logo" width="100" height="58">
+       <div> 
+        
         <h1>Gee Related Entertainment</h1>
         <p>It's More Than A Lifestyle, It's A Movement!</p>
-    </header>
+    
+</div>
+        </header>
 
     <!-- Start of the Page navigation -->
     <nav>
