--- a/03hand-coding/events.html
+++ b/03hand-coding/events.html
@@ -35,7 +35,7 @@
 
              <main>
                  <h2 id="sign">New Music</h2>
-        <p><a href=https://www.youtube.com/watch?v=NSGU6ZUgfOk target="_blank" rel="noopener">NewMusic</a></p>
+        <p><a href=https://www.youtube.com/watch?v=7-90Zyrb4b4&list=OLAK5uy_mWr-y1Wh0qzXwiyr_MgwYPVj8Xw98N-AY&index=9 target="_blank" rel="noopener">NewMusic</a></p>
       
         <h2>New Merchandise Coming Soon</h2>
         <dl>
