--- a/03hand-coding/events.html
+++ b/03hand-coding/events.html
@@ -26,7 +26,7 @@
         <main>        
         
             <!-- Start of the Page content -->
-        <h1 id="sign">Past Performances</h1>
+        <h1 id="Performances">Past Performances</h1>a href="events.html#sign">Past Performances</a>
        <h2>Salt Lake City</h2>
         <ol>
             <li>Liquid Joes</li>
