--- a/03hand-coding/events.html
+++ b/03hand-coding/events.html
@@ -32,6 +32,7 @@
             <li>Urban Lounge</li>
             <li>Baby Bash tour Infinity Event Center</li>
         </ol>
+        <h2>Albums Out Now</h2>
      <ul>
             <li>Ghetto Gospel 1 Out Now!</li>
             <li>Ghetto Gospel 2 Out Now!</li>
