--- a/03hand-coding/index.html
+++ b/03hand-coding/index.html
@@ -32,6 +32,7 @@
             and down south influences for the flavor that is Gee Related Entertainment G.R.E</p>    
         <!-- Start of the Page navigation -->
           <h2>Newest HipHop & R&B</h2>
+             <a href="events.html#sign">Past Performances</a>
             <p>Its More Than A Lifestyle Its A Movement!With more <strong>WORK</strong> Then your neighborhood pusher Menaceloko and <em>Gee Related Entertainment</em>  are proud to present you with the soundtrack to the streets!With over 30 tracks on 2 albums
             Dont sleep on the beats for the streets!Follow us on all Major Music Streaming Platforms and join the mailing list to be up to date on all future performances!</p>
              
