--- a/03hand-coding/events.html
+++ b/03hand-coding/events.html
@@ -37,7 +37,9 @@
             <dd>Menaceloko, Doeloko, Prozik</dd>
             <dt>Shows</dt>
             <dd>McMagic and Lil Rob, DJ Quick and HI-C, BabyBash and Baeza</dd>
-        </dl>
+        <dt>Streaming On</dt>
+               <dd>Apple music,Pandora,Spotify,Tidal</dd>
+           </dl>
         <h2>Albums Out Now</h2>
      <ul>
             <li>Ghetto Gospel 1 Out Now!</li>
