--- a/03hand-coding/index.html
+++ b/03hand-coding/index.html
@@ -19,7 +19,6 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
-            <li><a href="https://geerelatedboy.wixsite.com/geerelatedentertainm/about-5?wix-vod-video-id=df42c3ac3bad40aea3a76594d173f3a1&wix-vod-comp-id=comp-kyrydxop" target="_blank" rel="noopener">VIDEOS</a></li>
         </ul>
     </nav>
 
@@ -29,6 +28,7 @@
 
         <h2>Newest Hip-Hop & R&B</h2>
         <a href="events.html#sign">Past Performances</a>
+        <a href="https://geerelatedboy.wixsite.com/geerelatedentertainm/about-5?wix-vod-video-id=df42c3ac3bad40aea3a76594d173f3a1&wix-vod-comp-id=comp-kyrydxop" target="_blank" rel="noopener">VIDEOS</a>
         <p>It's More Than A Lifestyle, It's A Movement! With more <strong>WORK</strong> than your neighborhood pusher, Menaceloko and <em>Gee Related Entertainment</em> are proud to present you with the soundtrack to the streets! With over 30 tracks on 2 albums, don't sleep on the beats for the streets! Follow us on all Major Music Streaming Platforms and join the mailing list to be up to date on all future performances!</p>
     </main>
 
