--- a/05images/contact.html
+++ b/05images/contact.html
@@ -70,7 +70,7 @@
     </style>
 
 
-    <h1>Contact Us</h1>
+   <main><h1>Contact Us</h1></main> 
 
     <form action="submit_form.php" method="post">
         <label for="name">Name:</label>
