--- a/05images/gallery.html
+++ b/05images/gallery.html
@@ -32,7 +32,7 @@
     </nav>
 
     <!-- Start of the Page content -->
-    <h1>Photo Gallery</h1>
+    <main><h1>Photo Gallery</h1></main>
     <div class="gallery">
         <figure>
             <img src="images/album_cover.jpg" width="300" height="225" loading="lazy" alt="Ghetto Gospel 1 In Stores Now">
