--- a/05images/videos.html
+++ b/05images/videos.html
@@ -32,7 +32,7 @@
     </nav>
 
     <!-- Start of the Page content -->
-
+<main><h1>Videos</h1></main>
 <p><a href="https://geerelatedboy.wixsite.com/geerelatedentertainm/about-5" target="_blank" rel="noopener">Videos</a></p>
     <br>
     <br>
