--- a/05images/index.html
+++ b/05images/index.html
@@ -34,7 +34,7 @@
 
     <!-- Start of the Page content -->
     
-        <h1>Gee Related Entertainment</h1>
+    <main>  <h1>Gee Related Entertainment</h1> </main>
     <figure class="wrapped">    
     <img src="images/black_white.jpg"alt="Gee Related Entertainment"   
         width="100" height="auto"float="right">
