--- a/06form/index.html
+++ b/06form/index.html
@@ -66,7 +66,8 @@
     
     
      <!-- Start of the Page footer -->
-    <footer >
-        <p>&copy; 2023 &bull; Michael Goldsberry 323-861-6057 &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
+    <footer>
+        <p>&copy; 2023 &bull; Michael Goldsberry &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
     </footer>
+
 
