--- a/07advanced-css/thankyou.html
+++ b/07advanced-css/thankyou.html
@@ -38,7 +38,7 @@
             <li><a href="thankyou.html"></a></li>
         </ul>
     </nav>
-    </main>
+    </body>
     <!-- Start of the Page content -->
     <title>Thank You</title>
     Thank You For Contacting Us We Will Be Responding Shortly
