--- a/ 08media/booking.html
+++ b/ 08media/booking.html
@@ -43,6 +43,10 @@
     <main>
         
         <h1 id="sign">Booking Info</h1>
+         <audio controls>
+        <source src="gee-related-intro.mpeg">
+        <source src="gee-related-intro.ogg">
+        </audio>
         <p>You can
             
         <a href="geerelatedbrochure.pdf"target="blank">download</a> our brochure for more information.</p>
