--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>dwdd 1600 assignment list page</title>
 	</head>
 	<body>
-		<h1>[Your Name] Web Essentials Assignment Page</h1>
+		<h1>[Michael Goldsberry Web Essentials Assignment Page</h1>
 		<p><a href="01test">My Test Assignment</a></p>
 		
 		<h3>Module 3</h3>
@@ -31,7 +31,7 @@
 		
 		<h3>Module 8</h3>
 		<p><a href="08follow-along">06 Follow Along</a></p>
-		<p><a href="08media">Media Assignment</a></p>
+		<p><a href="08media-assignment">Media Assignment</a></p>
 		
 		<h3>Optional Capstone Activity</h3>
 		<p><a href="vacation">Vacation Web Site</a></p>
