--- a/04intro-css/events.html
+++ b/04intro-css/events.html
@@ -32,6 +32,22 @@
     <!-- Start of the Page content -->
     <main>
         <h1 id="sign">New Music</h1>
+         <h1 id="Performances">Past Performances</h1>
+     
+        <h2>Salt Lake City</h2>
+        <ol>
+            <li>Liquid Joes</li>
+            <li>Urban Lounge</li>
+            <li>Baby Bash tour Infinity Event Center</li>
+        </ol>
+           <dl>
+            <dt>Artists</dt>
+            <dd>Menaceloko, Doeloko, Prozik</dd>
+            <dt>Shows</dt>
+            <dd>McMagic and Lil Rob, DJ Quick and HI-C, BabyBash and Baeza</dd>
+        <dt>Streaming On</dt>
+               <dd>Apple music,Pandora,Spotify,Tidal</dd>
+           </dl>
         
         <p>New Merchandise Coming Soon</p>
         <dl>
