--- a/03hand-coding/events.html
+++ b/03hand-coding/events.html
@@ -24,7 +24,7 @@
 <br>
     <!-- Start of the Page content -->
     <main>
-        <h1 id="Performances">Past Performances</h1>
+        <h1 id="sign">Past Performances</h1>
      
         <h2>Salt Lake City</h2>
         <ol>
