--- a/04intro-css/videos.html
+++ b/04intro-css/videos.html
@@ -23,21 +23,16 @@
     <!-- Start of the Page navigation -->
     <nav>
         <ul>
-            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
-            <li><a href="videos.html">Videos</a></li>
+            <li class="active"><a href="videos.html">Videos</a></li>
             <li><a href="gallery.html">Photo Gallery</a></li>
         </ul>
     </nav>
 
     <!-- Start of the Page content -->
-    <main>
-        <h1>Gee Related Entertainment</h1>
-        <p>It's more than a lifestyle, it's a movement. Established in 2005 in southern California on the streets of LA's Florence District, Menace Loko's unique sound blends dirty south trap beats with old-school west coast, east coast, and down-south influences for the flavor that is Gee Related Entertainment (G.R.E).</p>
-        <p>It's More Than A Lifestyle, It's A Movement with more <em>work</em> than your neighborhood pusher. Menaceloko and Gee Related Entertainment are proud to present you with the soundtrack to the streets!</p>
 
-    </main>
-
+        <p><a href="https://geerelatedboy.wixsite.com/geerelatedentertainm/about-5" target="_blank" rel="noopener">Videos</a></p>
     <!-- Start of the Page footer -->
     <footer>
         <p>&copy; 2023 &bull; Michael Goldsberry 323-861-6057 &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
