--- a/06form/videos.html
+++ b/06form/videos.html
@@ -10,22 +10,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon"type="image/x-icon" href="favicon.ico">
     <title>Gee Related Entertainment</title>
 </head>
 
 <body>
     <!-- Start of the Page header -->
-
-        <header>
-        <img src="images/greblack.jpg" alt="site logo" width="100" height="58">
-       <div> 
-        
+    <header>
         <h1>Gee Related Entertainment</h1>
         <p>It's More Than A Lifestyle, It's A Movement!</p>
-    
-</div>
     </header>
+
     <!-- Start of the Page navigation -->
     <nav>
         <ul>
@@ -33,19 +27,17 @@
             <li><a href="events.html">Events</a></li>
             <li class="active"><a href="videos.html">Videos</a></li>
             <li><a href="gallery.html">Photo Gallery</a></li>
-            <li><a href="contact.html">Contact US</a></li>
         </ul>
     </nav>
 
     <!-- Start of the Page content -->
-</body>
-<p><a href="https://geerelatedboy.wixsite.com/geerelatedentertainm/about-5" target="_blank" rel="noopener">Videos</a></p>
+
+        <main><p><a href="https://geerelatedboy.wixsite.com/geerelatedentertainm/about-5" target="_blank" rel="noopener">Videos</a></p></main>
     <!-- Start of the Page footer -->
     <footer>
-        <p>&copy; 2023 &bull; Michael Goldsberry &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
+        <p>&copy; 2024 &bull; Michael Goldsberry 323-861-6057 &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
     </footer>
 
-
-
+</body>
 
 </html>
