--- a/06form/gallery.html
+++ b/06form/gallery.html
@@ -10,14 +10,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon"type="image/x-icon" href="favicon.ico">
     <title>Gee Related Entertainment</title>
 </head>
 
 <body>
     <!-- Start of the Page header -->
-    <header>
+
+        <header>
+        <img src="images/greblack.jpg" alt="site logo" width="100" height="58">
+       <div> 
+        
         <h1>Gee Related Entertainment</h1>
         <p>It's More Than A Lifestyle, It's A Movement!</p>
+    
+</div>
     </header>
 
     <!-- Start of the Page navigation -->
@@ -27,11 +34,12 @@
             <li><a href="events.html">Events</a></li>
             <li><a href="videos.html">Videos</a></li>
             <li class="active"><a href="gallery.html">Photo Gallery</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
 
     <!-- Start of the Page content -->
-    <main><h1>Photo Gallery</h1></main>
+    <h1>Photo Gallery</h1>
     <div class="gallery">
         <figure>
             <img src="images/album_cover.jpg" width="300" height="225" loading="lazy" alt="Ghetto Gospel 1 In Stores Now">
@@ -47,7 +55,7 @@
         </figure>
         <figure>
             <img src="images/onstage.JPG" width="300" height="225" loading="lazy" alt="On Stage">
-            <figcaption>On Stage Caption</figcaption>
+            <figcaption>On Stage </figcaption>
         </figure>
         <figure>
             <img src="images/djquik.JPG" width="300" height="225" loading="lazy" alt="Flyer for event">
@@ -69,7 +77,7 @@
 
     <!-- Start of the Page footer -->
     <footer>
-        <p>&copy; 2024 &bull; Michael Goldsberry &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
+        <p>&copy; 2023 &bull; Michael Goldsberry &bull; <a href="mailto:geerelatedboy@gmail.com">Email Us</a></p>
     </footer>
 </body>
 
